Fixed value/label order. Scroll only shows if page is overflowing, preview text are extendable, helper tooltip for select options, added confirmation for resetting data

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,9 @@
 .popup-content:has(#scenario-create-dialog) {
-    overflow-y: scroll;
+    overflow-y: auto;
+}
+
+.popup-content:has(#scenario-play-dialog) {
+    overflow-y: auto;
 }
 
 #scenario-create-dialog {
